<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="@null"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/pop_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_take_photo"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/sobot_item_setting_selector"
            android:text="@string/sobot_attach_take_pic"
            android:textSize="@dimen/sobot_text_font_normal"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dip"
            android:background="@color/sobot_line_1dp" />

        <Button
            android:id="@+id/btn_pick_photo"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/sobot_item_setting_selector"
            android:textSize="@dimen/sobot_text_font_normal"
            android:text="@string/sobot_choice_form_picture"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dip"
            android:background="#f0f0f0" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/sobot_item_setting_selector"
            android:textSize="@dimen/sobot_text_font_normal"
            android:text="@string/sobot_btn_cancle"/>
    </LinearLayout>

</RelativeLayout>